--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,16 @@
        <header class="w3-container w3-blue">
            <h1> Post Mantra </h1>
        </header>
+       <div class="w3-panal w3-green w3-display-container w3-center"
+           ng-show="mantraSuccessAlertShow">
+           <h3>Success</h3>
+           <p>Successully posted mantra.</p>
+       </div>
+       <div class="w3-panal w3-red w3-display-container w3-center"
+           ng-show="mantraErrorAlertShow">
+           <h3>Error!</h3>
+           <p>Internal Error.</p>
+       </div>
        <form class="w3-container">
            <p>
            <label> Mantram </label>
@@ -105,7 +115,7 @@
                ng-click="onCancelButtonClick()">
               Cancel  
            </button>
-    </div>
-</div>
+       </div>
+   </div>
 </body>
 </html>
